--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiago</title>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,9 +19,12 @@
     
     </header>
 
-    <div id="whapper">
+    <div id="Perfil">
       <img src="https://avatars1.githubusercontent.com/u/57600875?s=460&u=eb2ce80cac4db4ac3cbb78e5b7862890060d58f5&v=4" 
       alt="Thiago">
+      <h1>Thiago</h1>
+      <h2>Estudante de Javascript</h2>
+      <p>Programador - Colaborador da<a href="https://www.accenture.com/br-pt" target="_blank">Accenture</a> </p>
     </div>
     
 </body>
