--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="icon" href="https://raw.githubusercontent.com/rocketseat-education/bootcamp-launchbase-desafios-02/master/desafios/favicon.ico" type="image/x-icon" />
+    <link rel="icon"
+        href="https://raw.githubusercontent.com/rocketseat-education/bootcamp-launchbase-desafios-02/master/desafios/favicon.ico"
+        type="image/x-icon" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thiago</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <div class="links">
-    <a href="sobre.html">Sobre</a> 
-    <a href="comunidade.html">Comunidade</a> 
-    <a href="mailto:thiagosilva_guitar@hotmail.com">Email</a>
-    <a href="tel:+5581986288833">Telefone</a>
+            <a href="sobre.html">Sobre</a>
+            <a href="comunidade.html">Comunidade</a>
+            <a href="mailto:thiagosilva_guitar@hotmail.com">Email</a>
+            <a href="tel:+5581986288833">Telefone</a>
         </div>
-    
+
     </header>
 
     <div id="Perfil">
-      <img src="https://avatars1.githubusercontent.com/u/57600875?s=460&u=eb2ce80cac4db4ac3cbb78e5b7862890060d58f5&v=4" 
-      alt="Thiago">
-      <h1>Thiago</h1>
-      <h2>Estudante de Javascript</h2>
-      <p>Programador - Colaborador da<a href="https://www.accenture.com/br-pt" target="_blank">Accenture</a> </p>
+        <img src="https://avatars1.githubusercontent.com/u/57600875?s=460&u=eb2ce80cac4db4ac3cbb78e5b7862890060d58f5&v=4"
+            alt="Thiago">
+        <h1>Thiago</h1>
+        <h2>Estudante de Javascript</h2>
+        <p>Programador - Colaborador da<a href="https://www.accenture.com/br-pt" target="_blank">Accenture</a> </p>
     </div>
 
     <div id="rodape">
-        <a href="https://github.com/Thiagosilvaguitar" target="_blank">Github</a> 
+        <a href="https://github.com/Thiagosilvaguitar" target="_blank">Github</a>
         <a href="/">Twitter</a>
         <a href="/">Linkedin</a>
     </div>
-    
+
 </body>
+
 </html>
